--- a/source/template/weekFive/index copy 2.html
+++ b/source/template/weekFive/index copy 2.html
@@ -79,8 +79,34 @@ All Courses
                 </div>
               </div>
               <div class="card-body d-flex flex-column">
-                {% include "../component/studentPost.html" %}
-                {% include "../component/teacherPost.html" %}
+                <div class="article d-flex">
+                  <div class="author-header">  
+                    <div class="header-image"></div>             
+                  </div>
+                  <div class="article-content">
+                    <div class="author-name-big">Emily Wang</div>
+                    <div class="post-time">10:38 AM (4 hours ago)</div>
+                    <div class="text">Hi Teacher, the attached file is my homework of chapter 2. And here comes a question: Why in the following code the height of the div is bigger than the height of the img ? There is a gap below the image, but it doesn’t seems to be a padding/margin. What is the gap or extra space below image?</div>
+                    <a class="attachment d-block d-flex align-items-center justify-content-center">
+                      {% include "attach_file-24px.svg"%}
+                      HW-2-David.zip
+                    </a>
+                  </div>
+                </div>
+                <div class="article d-flex">
+                  <div class="author-header">  
+                    <div class="header-image"></div>             
+                  </div>
+                  <div class="article-content">
+                    <div class="author-name-big">Emily Wang</div>
+                    <div class="post-time">10:38 AM (4 hours ago)</div>
+                    <div class="text">Hi Teacher, the attached file is my homework of chapter 2. And here comes a question: Why in the following code the height of the div is bigger than the height of the img ? There is a gap below the image, but it doesn’t seems to be a padding/margin. What is the gap or extra space below image?</div>
+                    <a class="attachment d-block d-flex align-items-center justify-content-center">
+                      {% include "attach_file-24px.svg"%}
+                      HW-2-David.zip
+                    </a>
+                  </div>
+                </div>
                 
               </div> 
       
