--- a/public/css/ＷeekFive/main.css
+++ b/public/css/ＷeekFive/main.css
@@ -92,7 +92,7 @@ li {
 .qty-comments {
   line-height: 12px; }
 
-.author-name-big, .sub-title, .table-thead, .page-link-font, .user-id, .user-role, .access-level-select, .table-body, .user-name, .custom-access-checkbox-label {
+.author-name-big, .sub-title, .table-thead, .page-link-font, .user-id, .user-role, .access-level-select, .table-body, .user-name, .modal-edit-form-input, .custom-access-checkbox-label {
   font-size: 16px;
   line-height: 24px;
   font-family: Lato;
@@ -167,11 +167,14 @@ li {
   font-family: Lato;
   font-weight: 600; }
 
-.modal-form-input {
+.modal-form-input, .add-user-modal .modal-edit-form-input {
   font-size: 16px;
   line-height: 19px;
   font-family: Lato;
   font-weight: 300; }
+
+.modal-edit-form-input {
+  font-weight: 500; }
 
 .custom-access-checkbox-label {
   font-weight: 400; }
@@ -251,14 +254,21 @@ li {
 .add-user-modal .modal-body-title.title-3 {
   margin-bottom: 16px; }
 
-.add-user-modal .modal-form-input {
+.add-user-modal .modal-form-input, .add-user-modal .modal-edit-form-input {
   border-radius: 2px;
   border: 1px solid #000;
   padding: 16px;
   margin: 0;
   margin-bottom: 16px; }
 
-.add-user-modal .modal-form-input:last-of-type {
+.add-user-modal .modal-edit-form-input {
+  font-weight: 400; }
+
+.add-user-modal .modal-form-input.registed, .add-user-modal .registed.modal-edit-form-input {
+  background-color: #EDF4EE;
+  border-color: #EDF4EE; }
+
+.add-user-modal .modal-form-input:last-of-type, .add-user-modal .modal-edit-form-input:last-of-type {
   margin-bottom: 24.5px; }
 
 .add-user-modal hr {
@@ -272,10 +282,17 @@ li {
 
 .add-user-modal .verifity-status {
   margin-bottom: 18px; }
+  .add-user-modal .verifity-status.unverified svg {
+    fill: #E3006E; }
+  .add-user-modal .verifity-status.verified svg {
+    fill: #2A8356; }
+  .add-user-modal .verifity-status.deactivate-alarm {
+    color: #E3006E; }
+    .add-user-modal .verifity-status.deactivate-alarm svg {
+      fill: #E3006E; }
   .add-user-modal .verifity-status svg {
     width: 22px;
     height: 20px;
-    fill: #E3006E;
     margin-right: 9px; }
 
 .add-user-modal .verifity-mail-btn {
@@ -284,19 +301,20 @@ li {
   border: 1px solid #EDF4EE;
   color: #2A8356;
   margin-bottom: 24.5px; }
+  .add-user-modal .verifity-mail-btn.verify-mail {
+    color: #EDF4EE; }
 
 .add-user-modal .custom-select.access-level-select {
   height: 51px;
   padding-left: 16px;
   margin-bottom: 24.5px; }
 
-.add-user-modal .form-check-group {
-  margin-bottom: 50px; }
-  .add-user-modal .form-check-group .custom-control-label {
-    margin-left: 10px;
-    margin-bottom: 16px; }
-  .add-user-modal .form-check-group .custom-checkbox:last-child .custom-control-label {
-    margin-bottom: 0; }
+.add-user-modal .form-check-group .custom-control-label {
+  margin-left: 10px;
+  margin-bottom: 16px; }
+
+.add-user-modal .form-check-group .custom-checkbox:last-child .custom-control-label {
+  margin-bottom: 0; }
 
 .add-user-modal .add-user-footer {
   border: none;
@@ -317,11 +335,26 @@ li {
   color: #fff;
   margin-left: 16px; }
 
+.deactivate-block-space {
+  height: 50px; }
+
+.deactivate-block {
+  margin-top: 24.5px;
+  margin-bottom: 48px; }
+  .deactivate-block .deactivate-hr {
+    margin-bottom: 24.5px; }
+  .deactivate-block .btn-deactivate {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    width: 100%;
+    border: 1px solid #E3006E;
+    color: #E3006E; }
+
 .container {
   height: 100vh;
   width: 1200px; }
 
-.header, .side-nav .user-header, .card .card-body .author-header .header-image {
+.header, .side-nav .user-header, .card .card-body .author-header .head-image {
   background-size: cover;
   background-position: center;
   width: 40px;
@@ -444,13 +477,16 @@ span.drop-down svg {
     .card .card-header .article-title, .card .card-header .attachment, .card .card-header .edit-area-font {
       margin-top: 5.5px; }
   .card .card-body {
-    padding: 16px 16px 12.5px 16px; }
-    .card .card-body .author-header .header-image {
-      background-image: url("../../src/images/week5/photo-1504051771394-dd2e66b2e08f.jpeg"); }
+    padding: 16px 16px 23px 16px; }
+    .card .card-body .article {
+      margin-bottom: 16px; }
+    .card .card-body .author-header {
+      width: 100px; }
     .card .card-body .article-content {
       margin-left: 8px;
       margin-right: 16px;
-      border-bottom: 1px solid #CDDDCD; }
+      border-bottom: 1px solid #CDDDCD;
+      padding-bottom: 16px; }
       .card .card-body .article-content .post-time {
         margin-bottom: 16px; }
       .card .card-body .article-content .text {
@@ -460,12 +496,16 @@ span.drop-down svg {
         height: 40px;
         background-color: #EDF4EE;
         border: 1px solid #CDDDCD;
-        margin-bottom: 16.5px;
         border-radius: 2px; }
         .card .card-body .article-content .attachment svg {
           width: 24px;
           height: 24px;
           margin-right: 8px; }
+    .card .card-body .article:last-child {
+      margin-bottom: 0; }
+      .card .card-body .article:last-child .article-content {
+        border-bottom: 0;
+        padding-bottom: 0; }
   .card .edit-area-title {
     padding: 16px 122px 16px 25px;
     position: relative; }
