--- a/source/template/weekFive/admin.html
+++ b/source/template/weekFive/admin.html
@@ -197,74 +197,10 @@ Add New Admin</a>
 
 <!-- Show User -->
 {% include "../component/ShowUsermodal.html" %}
-
 <!-- Add User -->
-<div class="modal fade add-user-modal" id="addUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">New Admin</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true"> {% include "close-24px.svg" %}</span>
-        </button>
-      </div>
-      <form action="">
-      <div class="modal-body d-flex flex-column">
-        <p class="modal-body-title">Account</p>        
-        <label for="">Name</label><input class="modal-form-input" type="text">
-        <label for="">Email</label><input class="modal-form-input" type="text">
-        <hr>
-        <p class="modal-body-title title-2">Verification</p> 
-        <p class="verifity-status">
-          {% include "warning-24px.svg" %}
-          Unverified
-        </p>    
-        <button class="btn verifity-mail-btn">Send Verification Mail</button>
-        <hr>
-        <p class="modal-body-title title-2">Access Level</p> 
-        <!-- <button class="btn verifity-mail-btn">Send Verification Mail</button> -->
-        <select class="select custom-select  access-level-select">
-          <option selected >-Choose access level-</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-        <hr>
-        <p class="modal-body-title title-3">Custom Access</p>
-        <div class="form-check-group flex-column">
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck" name="example1">
-            <label class="custom-control-label custom-access-checkbox-label" for="customCheck">Lecture</label>
-          </div>
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck2" name="example1">
-            <label class="custom-control-label custom-access-checkbox-label" for="customCheck2">Coupon</label>
-          </div>
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck3" name="example1">
-            <label class="custom-control-label custom-access-checkbox-label" for="customCheck3">Message</label>
-          </div>
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck4" name="example1">
-            <label class="custom-control-label custom-access-checkbox-label" for="customCheck4">Setting</label>
-          </div>
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck5" name="example1">
-            <label class="custom-control-label custom-access-checkbox-label" for="customCheck5">Task menu</label>
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer add-user-footer">
-        <button type="button" class="btn btn-cancel">Cancel</button>
-        <button type="submit" class="btn btn-add">Add</button>
-      </div>
-    </form>
-    </div>         
-  </div>
-</div>
-
-
+{% include "../component/AddUsermodal.html" %}
 <!-- Edit  User -->
+{% include "../component/editUsermodal.html" %}
   {% endblock %}
 
   {% block script %}
@@ -284,8 +220,12 @@ Add New Admin</a>
 
   $('#add_user').on("click",function (e){
     e.preventDefault();
-    console.log(`aaa`);
     $('#addUserModal').modal('show');
+  });
+
+  $('#edit_user').on("click",function (e){
+    e.preventDefault();
+    $('#editUserModal').modal('show');
     
   });
   
