completed reply form

--- a/public/component/_layoutPost.html
+++ b/public/component/_layoutPost.html
@@ -8,8 +8,8 @@
                 
     </div>
     <div class="article-content">
-      <div class="article-nav">
-        <div class="article-author-data">
+      <div class="article-nav d-flex justify-content-between">
+        <div class="article-author-data ">
             <div class="author-name-big"></div>
             <div class="post-time"></div>
         </div>
