--- a/public/component/teacherPost.html
+++ b/public/component/teacherPost.html
@@ -8,8 +8,8 @@
                 
     </div>
     <div class="article-content">
-      <div class="article-nav">
-        <div class="article-author-data">
+      <div class="article-nav d-flex justify-content-between">
+        <div class="article-author-data ">
             <div class="author-name-big">
 Andy Chen (You)
 </div>
@@ -19,6 +19,9 @@ Andy Chen (You)
         </div>
         <div class="article-utility">
             
+    <button id="favor-article"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"/><path d="M0 0h24v24H0z" fill="none"/></svg></button> 
+    <button id="edit-article"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/><path d="M0 0h24v24H0z" fill="none"/></svg></button> 
+
 
         </div>
         
@@ -31,8 +34,8 @@ Hi David, by default, an image is rendered inline, like a letter so it sits on t
 You can: 　
 <br>
 <br>
-• adjust the vertical-align of the image to position it elsewhere (e.g. the middle )  <br>
-• change the display so it isn’t inline.
+• adjust the <span class="badge badge-light">vertical-align</span> of the image to position it elsewhere (e.g. the <span class="badge badge-light">middle</span> )  <br>
+• change the <span class="badge badge-light">display</span> so it isn’t inline.
 
       </div>
       
