--- a/source/templates/_layout-w5.html
+++ b/source/templates/_layout-w5.html
@@ -23,7 +23,7 @@
         </li>
          <li>
           {% include "question_answer-24px.svg" %}
-            <a href="">Question</a>
+            <a href="index.html">Question</a>
         </li>
          <li>
           {% include "assignment-24px.svg" %}
