--- a/public/component/studentPost.html
+++ b/public/component/studentPost.html
@@ -8,8 +8,8 @@
                 
     </div>
     <div class="article-content">
-      <div class="article-nav">
-        <div class="article-author-data">
+      <div class="article-nav d-flex justify-content-between">
+        <div class="article-author-data ">
             <div class="author-name-big">
 Emily Wang
 </div>
@@ -25,8 +25,7 @@ Emily Wang
       </div>  
       <div class="text">
         
-Hi Teacher, the attached file is my homework of chapter 2. And here comes a question: Why in the following code the height of the div is bigger than the height of the img ? There is a gap below the image, but it doesn’t seems to be a padding/margin. What is the gap or extra space below image?
-
+Hi Teacher, the attached file is my homework of chapter 2. And here comes a question: Why in the following code the height of the <span class="badge badge-light">div</span> is bigger than the height of the <span class="badge badge-light">img</span>? There is a gap below the image, but it doesn’t seems to be a padding/margin. What is the gap or extra space below image?
 
       </div>
       
