--- a/source/template/component/_layoutPost.html
+++ b/source/template/component/_layoutPost.html
@@ -8,8 +8,8 @@
                 
     </div>
     <div class="article-content">
-      <div class="article-nav">
-        <div class="article-author-data">
+      <div class="article-nav d-flex justify-content-between">
+        <div class="article-author-data ">
             <div class="author-name-big">{% block authorName %}{% endblock%}</div>
             <div class="post-time">{% block postTime %}{% endblock%}</div>
         </div>
