--- a/source/template/component/studentPost.html
+++ b/source/template/component/studentPost.html
@@ -10,8 +10,7 @@ Emily Wang
 {% block postUtility %}
 {% endblock%}
 {% block articleContent %}
-Hi Teacher, the attached file is my homework of chapter 2. And here comes a question: Why in the following code the height of the div is bigger than the height of the img ? There is a gap below the image, but it doesn’t seems to be a padding/margin. What is the gap or extra space below image?
-
+Hi Teacher, the attached file is my homework of chapter 2. And here comes a question: Why in the following code the height of the <span class="badge badge-light">div</span> is bigger than the height of the <span class="badge badge-light">img</span>? There is a gap below the image, but it doesn’t seems to be a padding/margin. What is the gap or extra space below image?
 {% endblock%}
 {% block attachment %}
 <a class="attachment d-block d-flex align-items-center justify-content-center">
