--- a/source/template/weekFive/index.html
+++ b/source/template/weekFive/index.html
@@ -1,5 +1,5 @@
 {% extends "../../templates/_layout-w5.html" %}
-        
+
 {% block title %}
 Assignment
 {% endblock %}
@@ -11,90 +11,134 @@ All Courses
 </span>
 {% endblock %}
 
-{% block content %}   
-      <div class="form-area d-flex justify-content-start">
+{% block content %}
+<div class="form-area d-flex justify-content-start">
 
-          <div class="users-list">
-            <h5 class="sub-title">All(4)
-              <span class="drop-down">
-              {% include "keyboard_arrow_down-24px.svg" %}
-            </span></h5>
-            <div class="list-group ">
-              <a href="#" class="list-group-item active">
-                <div class="d-flex justify-content-between">
-                  <p class="chapter">Chapter Assignment 2</p>
-                  <p class="time">4 hrs ago</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-end">
-                  <p class="article-title">Please check this file…</p>
-                  <p class="author-name">Emily Wang</p>
-                </div>
-              </a>
-              <a href="#" class="list-group-item">
-                <div class="d-flex justify-content-between">
-                  <p class="chapter">Chapter Assignment 1</p>
-                  <p class="time">12 hrs ago</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-end">
-                  <p class="article-title">My Homework</p>
-                  <p class="author-name">David Xu</p>
-                </div>
-              </a>
-              <a href="#" class="list-group-item">
-                <div class="d-flex justify-content-between">
-                  <p class="chapter">Final Assignment</p>
-                  <p class="time">18 hrs ago</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-end">
-                  <p class="article-title">Have a problem with this…</p>
-                  <p class="author-name">Tony Wei</p>
-                </div>
-              </a>
-              <a href="#" class="list-group-item">
-                <div class="d-flex justify-content-between">
-                  <p class="chapter">Final Assignment</p>
-                  <p class="time">19 hrs ago</p>
-                </div>
-                <div class="d-flex justify-content-between align-items-end">
-                  <p class="article-title">Did I do it right?</p>
-                  <p class="author-name">Christina Lin</p>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="reply-area">
-           <p class="qty-comments text-right">2 comments</p>
-            <div class="card">
-              <div class="card-header d-flex justify-content-between align-items-center">
-                <div>
-                  <p class="chapter">
-                    Chapter Assignment 2 / HTML&CSS
-                  </p>
-                  <p class="article-title">
-                    Please check this file for me, thanks!
-                  </p>
-                </div>
-                <div class="edit-icon">
-                  {% include "tententen.svg" %}
-                </div>
-              </div>
-              <div class="card-body d-flex flex-column">
-                {% include "../component/studentPost.html" %}
-                {% include "../component/teacherPost.html" %}
-                
-              </div> 
-      
-              
-              </div> 
-          </div>
-
-          </div>
-          
-      </div>
+  <div class="users-list">
+    <h5 class="sub-title">All(4)
+      <span class="drop-down">
+        {% include "keyboard_arrow_down-24px.svg" %}
+      </span></h5>
+    <div class="list-group ">
+      <a href="#" class="list-group-item active">
+        <div class="d-flex justify-content-between">
+          <p class="chapter">Chapter Assignment 2</p>
+          <p class="time">4 hrs ago</p>
+        </div>
+        <div class="d-flex justify-content-between align-items-end">
+          <p class="article-title">Please check this file…</p>
+          <p class="author-name">Emily Wang</p>
+        </div>
+      </a>
+      <a href="#" class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <p class="chapter">Chapter Assignment 1</p>
+          <p class="time">12 hrs ago</p>
+        </div>
+        <div class="d-flex justify-content-between align-items-end">
+          <p class="article-title">My Homework</p>
+          <p class="author-name">David Xu</p>
+        </div>
+      </a>
+      <a href="#" class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <p class="chapter">Final Assignment</p>
+          <p class="time">18 hrs ago</p>
+        </div>
+        <div class="d-flex justify-content-between align-items-end">
+          <p class="article-title">Have a problem with this…</p>
+          <p class="author-name">Tony Wei</p>
+        </div>
+      </a>
+      <a href="#" class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <p class="chapter">Final Assignment</p>
+          <p class="time">19 hrs ago</p>
+        </div>
+        <div class="d-flex justify-content-between align-items-end">
+          <p class="article-title">Did I do it right?</p>
+          <p class="author-name">Christina Lin</p>
+        </div>
+      </a>
     </div>
-  {% endblock %}
+  </div>
+  <div class="post-area">
+    <form method="" action="">
+      <p class="qty-comments text-right">2 comments</p>
+      <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-center">
+          <div class="post-title">
+            <p class="chapter">
+              Chapter Assignment 2 / HTML&CSS
+            </p>
+            <p class="article-title">
+              Please check this file for me, thanks!
+            </p>
+          </div>
+          <div class="edit-icon">
+            {% include "tententen.svg" %}
+          </div>
+        </div>
+        <div class="card-body d-flex flex-column">
+          {% include "../component/studentPost.html" %}
+          {% include "../component/teacherPost.html" %}
+        </div>
+      </div>
+      <div class="post-button-group d-flex justify-content-between">
+        <div class="switch-page">
+          <button class="switch-pre">
+            {% include "keyboard_arrow_left-24px.svg" %}
+          </button>
+          <button class="switch-next">
+            {% include "keyboard_arrow_right-24px.svg" %}
+          </button>
+        </div>
+        <div class="btn-group">
+          <button class="btn mark-as-read" id="markAsRead">Mark as read</button>
+          <button class="btn reply" id="reply" value="reply">Reply</button>
+        </div>
+      </div>
+      <!-- reply-container -->
+      <div class="post-reply-container hide">
+        <div class="card-header edit-area-title">
+          <ul class="d-flex align-items-center justify-content-around">
+            <li><a class="article-title" href="">Body Text {% include "arrow_drop_down-24px.svg" %}</a></li>
+            <li><a href="">{% include "format_bold-24px.svg" %}</a></li>
+            <li><a href="">{% include "format_italic-24px.svg" %}</a></li>
+            <li><a href="">{% include "format_list_bulleted-24px.svg" %}</a></li>
+            <li><a href="">{% include "format_list_numbered-24px.svg" %}</a></li>
+            <li><a href="">{% include "insert_photo-24px.svg" %}</a></li>
+            <li><a href="">{% include "insert_link-24px.svg" %}</a></li>
+            <li><a href="">{% include "code-24px.svg" %}</a></li>
+          </ul>
+        </div>
+        <div class="card-body edit-area-content">
+          <p class="edit-area-font">Reply an answer…</p>
+          <div class="button-group d-flex">
+            <button type="button" class="btn btn-cancel" id="cancelReply">Cancel</button>
+            <button type="submit" class="btn btn-reply" id="commitReply">Reply</button>
+          </div>
+        </div>
+      </div>
+      <!-- reply-container -->
+    </form>
+  </div>
+</div>
+{% endblock %}
 
- 
-  {% block script%}
 
-  {% endblock %}
+{% block script%}
+<script>
+  $("#cancelReply").on("click", function (e) {
+    e.preventDefault();
+    $(".post-reply-container").removeClass("show").addClass("hide");
+  });
+
+  $("#reply").on("click", function (e) {
+    e.preventDefault();
+    $(".post-reply-container").removeClass("hide").addClass("show");
+  });
+
+</script>
+
+{% endblock %}
