--- a/source/template/weekSix/index.html
+++ b/source/template/weekSix/index.html
@@ -46,7 +46,7 @@ current: index
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link svg-color-light" href="#">
                                       {% include "local_grocery_store-24px.svg"%}
                             </a>
                         </li>
@@ -56,7 +56,6 @@ current: index
         </div>
     </header>
     <main class="container-fluid mainContent">
-        <!-- jumbotron -->
         <section>
             <div class="row justify-content-md-start align-items-center">
                 <div class="container">
@@ -73,12 +72,14 @@ current: index
             <div class="row justify-content-md-end">
                 <div class="col-lg-6 mainBackground">
                 </div>
+                <div class="mask"></div>
             </div>
+
         </section>
     </main>
     <footer>
         <div class="footer-jumbotron ">
-            <div class="jumbotronMask "></div>
+            <div class="mask"></div>
             <div class="container h-100 ">
                 <div class="row h-100 align-items-center ">
                     <div class="col-lg-5 col-sm-3 ">
