--- a/public/css/WeekSix/all.css
+++ b/public/css/WeekSix/all.css
@@ -7553,11 +7553,12 @@ a.text-green2:hover, a.text-green2:focus {
     color: rgba(0, 0, 0, 0.9); }
 
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5); }
+  color: #fff;
+  font-weight: 200; }
   .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-    color: rgba(0, 0, 0, 0.7); }
+    color: #fff; }
   .navbar-light .navbar-nav .nav-link.disabled {
-    color: rgba(0, 0, 0, 0.3); }
+    color: #fff; }
 
 .navbar-light .navbar-nav .show > .nav-link,
 .navbar-light .navbar-nav .active > .nav-link,
@@ -7646,6 +7647,19 @@ a.text-green2:hover, a.text-green2:focus {
 .test {
   border: 1px solid #000; }
 
+.svg-color-light {
+  fill: #fff; }
+
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100vw; }
+
+main {
+  position: relative; }
+
 .footer-jumbotron {
   background-image: url("../../src/images/week6/tom-crew-uDF1mW7EUwM-unsplash.jpg");
   background-size: cover;
@@ -7656,13 +7670,7 @@ a.text-green2:hover, a.text-green2:focus {
   @media screen and (max-width: 768px) {
     .footer-jumbotron {
       height: 224px;
-      position: relative; }
-      .footer-jumbotron .jumbotronMask {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        background-color: #000;
-        opacity: 0.38; } }
+      position: relative; } }
   .footer-jumbotron .slogan {
     font-size: 3rem;
     line-height: 4rem;
@@ -7674,6 +7682,16 @@ a.text-green2:hover, a.text-green2:focus {
         line-height: 3rem;
         font-weight: 500;
         margin-bottom: 1.5rem; } }
+
+@media screen and (max-width: 768px) {
+  .mask {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    opacity: 0.38; } }
 
 @media screen and (max-width: 768px) {
   .subscribeBtn {
