--- a/source/scss/WeekSix/_layout.scss
+++ b/source/scss/WeekSix/_layout.scss
@@ -6,7 +6,26 @@
 //16 1
 //72 4.5
 //32 2
-//$spacers: map-merge( ( 0: 0, 1: ($spacer * .25), 2: ($spacer * .5), 3: $spacer, 4: ($spacer * 1.5), 5: ($spacer * 3)), $spacers);
+//$spacers: map-merge( ( 0: 0, 1: ($spacer * .25), 2: ($spacer * 1.5), 3: $spacer, 4: ($spacer * 1.5), 5: ($spacer * 2), 6: ($spacer * 3), 7: ($spacer * 4.5)), $spacers);
+// $h1-font-size: $font-size-base * 3 !default;
+// $h2-font-size: $font-size-base * 2 !default;
+// $h3-font-size: $font-size-base * 1.75 !default;
+// $h4-font-size: $font-size-base * 1.5 !default;
+// $h5-font-size: $font-size-base * 1.25 !default;
+// $h6-font-size: $font-size-base !default;
+// $headings-margin-bottom: $spacer / 2 !default;
+// $headings-font-family: null !default;
+// $headings-font-weight: 500 !default;
+// $headings-line-height: 1.2 !default;
+// $headings-color: null !default;
+// $display1-size: 6rem !default;
+// $display2-size: 5.5rem !default;
+// $display3-size: 4.5rem !default;
+// $display4-size: 3.5rem !default;
+// $display1-weight: 300 !default;
+// $display2-weight: 300 !default;
+// $display3-weight: 300 !default;
+// $display4-weight: 300 !default;
 header {
     // background-color: #7d7d7d;
 }
@@ -23,4 +42,8 @@ footer {
 
 .svg-color-light {
     fill: $white;
+}
+
+li {
+    list-style-type: none;
 }
