--- a/source/scss/WeekSix/all.scss
+++ b/source/scss/WeekSix/all.scss
@@ -17,6 +17,10 @@
     border: 1px solid #fff;
 }
 
+.testbor3 {
+    border: 1px solid pink;
+}
+
 .padding-0 {
     padding: 0;
 }
@@ -30,6 +34,10 @@ body {
     margin-bottom: 0 !important;
     margin-left: 1rem !important;
     margin-right: 1rem !important;
+}
+
+a.green {
+    color: #0E8A00;
 }
 
 .btn-fluid {
