--- a/source/template/weekSix/index.html
+++ b/source/template/weekSix/index.html
@@ -57,7 +57,7 @@ current: index
     </header>
     <main class="container-fluid mainContent">
         <section>
-            <div class="row justify-content-md-start align-items-center">
+            <div class="row justify-content-md-start align-items-center ">
                 <div class="container">
                     <div class="mainJumbotron col-md-6 text-center text-md-left">
                         <p class="h1 col-md-10 mb-4 mb-sm-4">Enjoy Your <br>Minimalist Lifestyle.</p>
@@ -76,9 +76,56 @@ current: index
             </div>
 
         </section>
+        <section>
+            <ul class="propagandaList container mt-md-7">
+                <li>
+                    <div class="row mb-md-4 mb-2">
+                        <div class="col-md-6 text-center mb-2 mb-md-4">
+                            <img src="{{ path.image_path}}week6/neven-krcmarek-F1oNsAykHa0-unsplash.jpg" alt="">
+                        </div>
+                        <div class="col-md-1"></div>
+                        <div class="col-md-4 d-flex flex-column justify-content-center">
+                            <h4 class="mb-3">Special Clays</h4>
+                            <p class="mb-4">A general body formulation for contemporary earthenware is 25% kaolin, 25% ball clay, 35% quartz and 15% feldspar.</p>
+                            <a href="#" class="green">learn more</a>
+                        </div>
+                    </div>
+
+                </li>
+                <li>
+                    <div class="row flex-row-reverse mb-4 md-3">
+                        <div class="col-md-6 text-center mb-2 mb-md-4">
+                            <img src="{{ path.image_path}}week6/anne-nygard-sHyerRuFqT4-unsplash.jpg" alt="">
+                        </div>
+                        <div class="col-md-1"></div>
+                        <div class="col-md-4 d-flex flex-column align-items-md-end justify-content-center">
+                            <h4 class="mb-3">Less is more</h4>
+                            <p class="mb-4 text-md-right">Trimming pottery can transform a weighty Earth-bound pot into one that is a pleasure to hold, look at, and use.</p>
+                            <a href="#" class="green">learn more</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="row mb-md-7 mb-6">
+                        <div class="col-md-6 text-center  mb-2 mb-md-4">
+                            <img src="{{ path.image_path}}week6/tom-crew-GOtE6-VOwH0-unsplash.jpg" alt="">
+                        </div>
+                        <div class="col-md-1"></div>
+                        <div class="col-md-4 d-flex flex-column justify-content-center">
+                            <h4 class="mb-3">Marvelous Detail</h4>
+                            <p class="mb-4">In Craftsman, the art director, working with marketers, develops or creates an idea of a new creation.</p>
+                            <a href="#" class="green">learn more</a>
+                        </div>
+                    </div>
+
+
+                </li>
+            </ul>
+
+        </section>
     </main>
     <footer>
-        <div class="footer-jumbotron ">
+        <div class="footer-jumbotron d-block">
             <div class="mask"></div>
             <div class="container h-100 ">
                 <div class="row h-100 align-items-center ">
