--- a/source/scss/WeekSix/_variables.scss
+++ b/source/scss/WeekSix/_variables.scss
@@ -76,7 +76,7 @@ $enable-deprecation-messages: true !default;
 $spacer: 1rem !default;
 $spacers: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
-$spacers: map-merge( ( 0: 0, 1: ($spacer * .25), 2: ($spacer * .5), 3: $spacer, 4: ($spacer * 1.5), 5: ($spacer * 3)), $spacers);
+$spacers: map-merge( ( 0: 0, 1: ($spacer * .25), 2: ($spacer * 1.5), 3: $spacer, 4: ($spacer * 1.5), 5: ($spacer * 2), 6: ($spacer * 3), 7: ($spacer * 4.5)), $spacers);
 // This variable affects the `.h-*` and `.w-*` classes.
 $sizes: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
